--- a/config/common.build.gradle
+++ b/config/common.build.gradle
@@ -172,7 +172,7 @@ uploadArchives {
 
                 developers {
                     developer {
-                        id 'omkarashish'
+                        id 'ashishshinde'
                         name 'Ashish Shinde'
                         email 'omkarashish@gmail.com'
                     }
